--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   },
   "autoload": {
     "psr-4": {
-      "": "modules/"
+      "": "modules/",
+      "App\\": "app/"
     },
     "classmap": []
   },
