--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
   "type": "project",
   "require": {
     "php": ">=7.0",
-    "php-di/php-di": "5.4.0"
+    "php-di/php-di": "5.4.0",
+    "symfony/http-foundation": "3.1.x-dev"
   },
   "require-dev": {
+    "symfony/var-dumper": "3.1.x-dev"
   },
   "autoload": {
     "psr-4": {
