--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "require": {
     "php": ">=7.0",
     "php-di/php-di": "5.4.0",
-    "symfony/http-foundation": "3.1.x-dev"
+    "symfony/http-foundation": "3.1.x-dev",
+    "nilportugues/sql-query-builder": "1.5.0"
   },
   "require-dev": {
     "symfony/var-dumper": "3.1.x-dev"
