--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "php-di/php-di": "5.4.0",
     "symfony/http-foundation": "3.1.x-dev",
     "nilportugues/sql-query-builder": "1.5.0",
-    "vlucas/phpdotenv": "^2.4"
+    "vlucas/phpdotenv": "^2.4",
+    "guzzlehttp/guzzle": "6.2.2"
   },
   "require-dev": {
     "symfony/var-dumper": "3.1.x-dev"
